cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
package.edition = "2024"
members = [
    "crates/epicentre_diagnostics",
    "crates/neurotransmitter",
    "crates/rb5009_listener",
]

[profile.dev]
codegen-backend = "cranelift"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
correctness = "warn"
suspicious = "warn"
style = "warn"
pedantic = "warn"
nursery = "warn"
complexity = "warn"
perf = "warn"
enum_glob_use = { level = "warn", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
match_bool = { level = "allow", priority = 1 }

[workspace.dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.3", features = ["macros"] }
clap = { version = "4.5.36", features = ["derive"] }
color-eyre = "0.6.3"
iroh = "0.34.1"
iroh-base = "0.34.1"
iroh-blobs = { version = "0.34.1", features = ["rpc"] }
iroh-docs = { version = "0.34.0", features = ["rpc"] }
iroh-gossip = "0.34.1"
rand = "0.8.5"
thiserror = "2.0"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
epicentre_diagnostics = { version = "0.1.0", path = "crates/epicentre_diagnostics" }

[workspace.dependencies.tokio]
version = "1.44.2"
default-features = false
features = ["rt-multi-thread", "macros"]
