cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
package.edition = "2024"
members = ["crates/*"]

[profile.dev]
codegen-backend = "cranelift"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
correctness = "warn"
suspicious = "warn"
style = "warn"
pedantic = "warn"
nursery = "warn"
complexity = "warn"
perf = "warn"
enum_glob_use = { level = "warn", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
match_bool = { level = "allow", priority = 1 }

[workspace.dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
base64 = "0.22.1"
clap = "4.5.36"
color-eyre = "0.6.3"
epicentre_diagnostics = { path = "crates/epicentre_diagnostics" }
eui48 = "1.1.0"
itertools = "0.14.0"
rand = "0.8.5"
reqwest = "0.12.24"
ringbuffer = "0.16.0"
serde = "1.0.226"
serde_json = "1.0.145"
spinoff = "0.8.0"
sysinfo = "0.37.2"
thiserror = "2.0"
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.19"
ureq = "3.1.2"
uom = "0.37.0"
derive_more = "2.0.1"

[workspace.dependencies.tokio]
version = "1.44.2"
default-features = false
features = ["rt-multi-thread", "macros"]
