[package]
name = "neurotransmitter"
version = "0.1.0"
edition.workspace = true

[dependencies]
epicentre_diagnostics = { version = "0.1.0", path = "../epicentre_diagnostics" }
iroh-base.workspace = true
iroh-blobs.workspace = true
iroh.workspace = true
tokio.workspace = true

[lints]
workspace = true
