[package]
name = "neurotransmitter"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "neurotransmitter_server"
path = "src/server.rs"

[[bin]]
name = "neurotransmitter_client"
path = "src/client.rs"

[dependencies]
anyhow.workspace = true
epicentre_diagnostics = { version = "0.1.0", path = "../epicentre_diagnostics" }
iroh-base.workspace = true
iroh-blobs.workspace = true
iroh.workspace = true
tokio.workspace = true
clap = { version = "4.5.36", features = ["derive"] }

[lints]
workspace = true
