[package]
name = "neurotransmitter"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "neurotransmitter_server"
path = "src/server.rs"

[[bin]]
name = "neurotransmitter_client"
path = "src/client.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
epicentre_diagnostics.workspace = true
iroh-base.workspace = true
iroh-blobs.workspace = true
iroh-docs.workspace = true
iroh-gossip.workspace = true
iroh.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
