[package]
name = "rb5009_listener"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
clap.workspace = true
epicentre_diagnostics.workspace = true
eui48 = { workspace = true, features = ["serde", "serde_json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
spinoff.workspace = true
thiserror.workspace = true
tokio.workspace = true
ureq = { workspace = true, features = ["json"] }

[lints]
workspace = true
