[package]
name = "rb5009_listener"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
epicentre_diagnostics.workspace = true
eui48 = { workspace = true, features = ["serde", "serde_json"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
ureq = { workspace = true, features = ["json"] }

[lints]
workspace = true
