[package]
name = "sulphur"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "sulphur_client"
path = "src/bin/client.rs"

[[bin]]
name = "sulphur_server"
path = "src/bin/server.rs"

[dependencies]
axum.workspace = true
clap = { workspace = true, features = ["derive"] }
epicentre_diagnostics.workspace = true
itertools.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
ringbuffer.workspace = true
serde = { workspace = true, features = ["derive"] }
sysinfo.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time"] }
tokio-util.workspace = true

[lints]
workspace = true
